--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,28 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @layer base { */
-/*   * { */
-/*     @apply border-border; */
-/*   } */
-/*   body { */
-/*     @apply bg-background text-foreground; */
-/*     @apply h-full w-full; */
-/*     /1* @apply m-0 bg-slate-900 text-stone-200; *1/ */
-/*     /1* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; *1/ */
-/*   } */
-/* } */
-
-/* html, */
-/* body { */
-/*   @apply h-full w-full; */
-/* } */
-
-/* body { */
-/*   @apply m-0 bg-slate-900 text-stone-200; */
-/*   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
-/* } */
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -58,8 +36,16 @@
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    /* --background: 222.2 84% 4.9%; */
+    --background: 221.975 76.3% 7.4875%;
+    /* --foreground: 210 40% 98%; */
+    --foreground: 213 30% 85%;
+    --fg1: 211.1667 37.8333% 95.8333%;
+    --fg2: 212.3333 35.6667% 93.6667%;
+    --fg3: 213.5 34% 91.5%;
+    --fg4: 214.6667 32.3333% 89.3333%;
+    /* --fg5: 215.8333 30.1667% 87.1667%; */
+    --fg5: 213 30% 85%;
 
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
@@ -72,6 +58,9 @@
 
     --muted: 217.2 32.6% 17.5%;
     --moreMuted: 219.7 40% 14.35%;
+    --muted1: 221.975 76.3% 7.4875%;
+    --muted2: 221.45 62% 9.625%;
+    --muted3: 220.925 47.7% 11.7625%;
     --muted-foreground: 215 20.2% 65.1%;
 
     --accent: 217.2 32.6% 17.5%;
@@ -88,14 +77,14 @@
     --card-foreground: 210 40% 98%;
   }
 
+  --background: 222.2 84% 4.9%;
+  --moreMuted: 219.7 40% 14.35%;
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
     @apply h-full w-full;
-    /* @apply m-0 bg-slate-900 text-stone-200; */
-    /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
   }
 }
 
