--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,10 +38,11 @@
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    /* --background: 222.2 84% 4.9%; */
+    --background: 222, 47%, 11%;
     --foreground: 210 40% 98%;
 
-    --popover: 222.2 84% 4.9%;
+    --popover: 222, 47%, 11%;
     --popover-foreground: 210 40% 98%;
 
     --primary: 217.2 91.2% 59.8%;
@@ -59,16 +60,14 @@
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
 
-    --border: 217.2 32.6% 17.5%;
+    --border: 215, 25%, 27%;
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
 
-    --card: 222.2 84% 4.9%;
+    --card: 222, 47%, 11%;
     --card-foreground: 210 40% 98%;
   }
 
-  --background: 222.2 84% 4.9%;
-  --moreMuted: 219.7 40% 14.35%;
   * {
     @apply border-border;
   }
